# volta

./: CHANGELOG.md  Cargo.toml  README.md  get-volta.sh
.github/workflows/: release.yml
crates/archive/: Cargo.toml
crates/fs-utils/: Cargo.toml
crates/progress-read/: Cargo.toml
crates/test-support/: Cargo.toml
crates/validate-npm-package-name/: Cargo.toml
crates/volta-core/: Cargo.toml
crates/volta-core/src/error/: kind.rs
crates/volta-core/src/platform/: tests.rs
crates/volta-core/src/run/: mod.rs  node.rs  npm.rs
crates/volta-core/src/tool/: mod.rs
crates/volta-core/src/tool/package/: mod.rs
crates/volta-layout/: Cargo.toml
crates/volta-layout-macro/: Cargo.toml
crates/volta-migrate/: Cargo.toml
crates/volta-migrate/src/: v2.rs
src/: main.rs  volta-shim.rs
