[package]
name = "archive"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
edition = "2024"

[dependencies]
flate2 = "1.1.7"
tar = "0.4.44"
# Set features manually to drop usage of `time` crate: we do not rely on that
# set of capabilities, and it has a vulnerability. We also don't need to use
# every single compression algorithm feature since we are only downloading
# Node as a zip file
zip_rs = { version = "6.0.0", package = "zip", default-features = false, features = ["deflate", "bzip2"] }
tee = "0.1.0"
fs-utils = { path = "../fs-utils" }
progress-read = { path = "../progress-read" }
verbatim = "0.1.1"
cfg-if = "1.0.4"
headers = "0.4.1"
thiserror = "2.0.17"
attohttpc = { version = "0.30.1", default-features = false, features = ["json", "compress", "tls-rustls-native-roots", "tls-rustls-native-roots-ring"] }
log = { version = "0.4.29", features = ["std"] }
