[package]
name = "volta-core"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
edition = "2021"

[features]
mock-network = ["mockito"]
# The `cross-platform-docs` feature flag is used for generating API docs for
# multiple platforms in one build.
# See ci/publish-docs.yml for an example of how it's enabled.
# See volta-core::path for an example of where it's used.
cross-platform-docs = []

[dependencies]
terminal_size = "0.4.3"
indicatif = "0.18.0"
console = "0.16.0"
readext = "0.1.0"
serde_json = { version = "1.0.143", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
archive = { path = "../archive" }
node-semver = "2.2.0"
cmdline_words_parser = "0.2.1"
fs-utils = { path = "../fs-utils" }
cfg-if = "1.0.3"
tempfile = "3.21.0"
os_info = "3.12.0"
detect-indent = "0.1.0"
envoy = "0.1.3"
mockito = { version = "1.7.0", optional = true }
regex = "1.11.2"
dirs = "6.0.0"
# We manually configure the feature list here because 0.4.16 includes the
# `oldtime` feature by default to avoid a breaking change. Additionally, using
# the feature list explicitly lets us drop the `wasmbind` feature, which we do
# not need.
chrono = { version = "0.4.41", default-features = false, features = ["alloc", "std", "clock"] }
validate-npm-package-name = { path = "../validate-npm-package-name" }
textwrap = "0.16.2"
log = { version = "0.4.27", features = ["std"] }
ctrlc = "3.4.7"
walkdir = "2.5.0"
volta-layout = { path = "../volta-layout" }
once_cell = "1.21.3"
dunce = "1.0.5"
ci_info = "0.14.14"
httpdate = "1.0.3"
headers = "0.4.1"
attohttpc = { version = "0.30.1", default-features = false, features = ["json", "compress", "tls-rustls-native-roots"] }
chain-map = "0.1.0"
indexmap = "2.11.0"
retry = "2.1.0"
fs2 = "0.4.3"
which = "8.0.0"
dotenvx-rs = "0.4.14"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
junction = "1.2.0"
