[package]
name = "volta-migrate"
version = "0.1.0"
authors = ["Charles Pierce <cpierce.grad@gmail.com>"]
edition = "2024"

[dependencies]
volta-core = { path = "../volta-core" }
volta-layout = { path = "../volta-layout" }
log = { version = "0.4.29", features = ["std"] }
tempfile = "3.23.0"
node-semver = "2.2.0"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde = { version = "1.0.228", features = ["derive"] }
walkdir = "2.5.0"
